# hex

./: Cargo.toml  README.md
cli/src/: main.rs
server/: Cargo.toml
