[workspace]

members = [
    "conf",
    "database",
    "database/gossip",
    "music-container",
    "server",
    "server/protocol",
    "zyklop",
    "cli",
    "nightly-worker"
]

# exclude zyklop since it is built for the pocket CHIP
# exclude music-container because it does not build
# exclude nightly-worker because it depends on an unknown crate hex_conf
default-members = [
    "conf",
    "database",
    "database/gossip",
    "server",
    "server/protocol",
    "cli"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = false
lto = true
